[package]
name = "black-widow"
version = "0.1.0"
authors = ["Broly CJW <brolycjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "*"
http = "*"
markup5ever_rcdom = "*"
reqwest = { version = "0.10", features = ["blocking", "json"] }
time = "*"
tokio = { version = "0.2", features = ["full"] }
url = "*"
